# App-BackyardBrains

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: ccpp.yml
cmake/: FindHIDAPI.cmake  FindLSL.cmake
src/: HIDUsbManager.cpp  HIDUsbManager.h
src/native/: PathsWin.cpp
